--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -50,7 +50,7 @@ jobs:
           chmod 600 /tmp/ssh_key
 
       - name: Copy files to server
-        run: scp -r -i ${{ secrets.SSH_KEY }} Dockerfile ubuntu@${{ secrets.SSH_HOST }}:/home/ubuntu/server_test
+        run: scp -r -i /tmp/ssh_key Dockerfile ubuntu@${{ secrets.SSH_HOST }}:/home/ubuntu/server_test
 
       - name: Transfer Build File using SCP
         uses: appleboy/scp-action@master  # .jar 파일 원격 서버로 복사
