--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -55,7 +55,16 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: |
             build/libs/server_test-0.0.1-SNAPSHOT.jar
-            src/
+          target: "/home/ubuntu/server_test"
+
+      - name: Transfer Dockerfile using SCP
+        uses: appleboy/scp-action@master  # .jar 파일 원격 서버로 복사
+        with:
+          username: ubuntu
+          host: ${{ secrets.SSH_HOST }}
+          key: ${{ secrets.SSH_KEY }}
+          source: |
+            Dockerfile
           target: "/home/ubuntu/server_test"
 
       - name: Deploy using Docker Compose via SSH
