--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -67,6 +67,15 @@ jobs:
             Dockerfile
           target: "/home/ubuntu/server_test"
 
+      - name: Transfer Docker-compose using SCP
+        uses: appleboy/scp-action@master  # .jar 파일 원격 서버로 복사
+        with:
+          username: ubuntu
+          host: ${{ secrets.SSH_HOST }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "docker-compose.yml,app.conf"
+          target: "/home/ubuntu/server_test"
+
       - name: Deploy using Docker Compose via SSH
         uses: appleboy/ssh-action@master
         with:
