--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -57,23 +57,23 @@ jobs:
             build/libs/server_test-0.0.1-SNAPSHOT.jar
           target: "/home/ubuntu/server_test"
 
-      - name: Transfer Dockerfile using SCP
+      - name: Transfer Application.properties using SCP
         uses: appleboy/scp-action@master  # .jar 파일 원격 서버로 복사
         with:
           username: ubuntu
           host: ${{ secrets.SSH_HOST }}
           key: ${{ secrets.SSH_KEY }}
           source: |
-            Dockerfile
+            src/main/resources/application.properties
           target: "/home/ubuntu/server_test"
 
-      - name: Transfer Docker-compose using SCP
+      - name: Transfer Dockerfile && app.conf && docker-compose using SCP
         uses: appleboy/scp-action@master  # .jar 파일 원격 서버로 복사
         with:
           username: ubuntu
           host: ${{ secrets.SSH_HOST }}
           key: ${{ secrets.SSH_KEY }}
-          source: "docker-compose.yml,app.conf"
+          source: "Dockerfile,app.conf,docker-compose.yml,.env"
           target: "/home/ubuntu/server_test"
 
       - name: Deploy using Docker Compose via SSH
