--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 .gradle
-!build/libs/server_test-0.0.1-SNAPSHOT.jar
+build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -25,6 +25,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.env
+
 
 ### NetBeans ###
 /nbproject/private/
