--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=server_test
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://nuclear-mysql-server:3306/nuclear
-spring.datasource.username=my_nuclear
-spring.datasource.password=nuclear
+spring.datasource.url=jdbc:mysql://${MYSQL_URL}:3306/${MYSQL_DB}
+spring.datasource.username=${ MYSQL_USERNAME }
+spring.datasource.password=${ MYSQL_PASSWORD }
